[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isolatecell = {path="../../components/isolatecell"}
stores = {path="../../components/stores"}
guild-logger = {path="../../components/guild-logger"}
tscompiler = {path="../../components/tscompiler"}

twilight-model = {workspace = true}

deno_core = {workspace = true}
v8 = {workspace = true}
serde_v8 = "0.78"

tracing = {workspace = true}
tracing-futures = { version = "0.2.5" }

serde = { version = "1.0", features = ["derive"] }
tokio = {workspace = true}
futures = "0.3"
anyhow = {workspace = true}
url = "2.2"
serde_json = {workspace = true}
async-trait = {workspace = true}
lazy_static = {workspace = true}
regex = "1.5"
metrics = "0.18"

[build-dependencies]
deno_core = {workspace = true}
