[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = { path = "../../components/stores" }
guild-logger = { path = "../../components/guild-logger" }
common = { path = "../../components/common" }
tscompiler = { path = "../../components/tscompiler" }

cpu-time = "1.0"
deno_core = { workspace = true }
v8 = { workspace = true }
serde_v8 = "0.152"

tracing = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }
regex = "1.5"
metrics = { workspace = true }

[build-dependencies]
deno_core = { workspace = true }
