[package]
name = "vmthread"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isolatecell = {path="../../components/isolatecell"}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
metrics = "0.18"
