[package]
name = "vmthread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isolatecell = {path="../../components/isolatecell"}
tokio = {workspace = true}
tracing = {workspace = true}
metrics = "0.18"
