[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stores = { path = "../../components/stores" }
discordoauthwrapper = { path = "../../components/discordoauthwrapper" }
botrpc = { path = "../../components/botrpc" }
guild-logger = { path = "../../components/guild-logger" }
dbrokerapi = { path = "../../components/dbrokerapi" }
validation = { path = "../../components/validation" }
common = { path = "../../components/common" }
axum-metrics-layer = { path = "../../components/axum-metrics-layer" }
stripe-premium = { path = "../../components/stripe-premium" }
runtime-models = { path = "../../components/runtime-models" }

oauth2 = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.5.1", features = ["trace", "set-header"] }
tower = "0.4"
axum = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
image = { version = "0.24.8", features = ["webp-encoder"] }

tracing = { workspace = true }
tracing-log = { workspace = true }

twilight-http = { workspace = true }
twilight-model = { workspace = true }
